parallax overflow fix

--- a/_sass/_framework/_layout.scss
+++ b/_sass/_framework/_layout.scss
@@ -52,9 +52,10 @@
 }
 	
 .background-parallax{
-	overflow: hidden;
+	overflow: visible;
 	opacity: .3;
 	.parallax-layer{
+		overflow: visible;
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
